Enabled Microservice Security using Zuul

--- a/zuul-gateway/pom.xml
+++ b/zuul-gateway/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <!-- Enable Security in Zuul -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
